241028_연상훈_객체변환메서드_수정